--- a/WEB/Clonet/About_Customer/build.gradle
+++ b/WEB/Clonet/About_Customer/build.gradle
@@ -22,3 +22,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootWar {
+	archiveBaseName = 'About_Customer'
+	archiveFileName = 'About_Customer.war'
+	archiveVersion = "0.0.0"
+}
