--- a/WEB/Clonet/Login/build.gradle
+++ b/WEB/Clonet/Login/build.gradle
@@ -19,6 +19,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+bootWar {
+    archiveBaseName = 'Login'
+    archiveFileName = 'Login.war'
+    archiveVersion = "0.0.0"
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
