--- a/WEB/Clonet/Illust_Customer/Dockerfile
+++ b/WEB/Clonet/Illust_Customer/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-ARG JAR_FILE_PATH=/build/libs/*.war
-COPY ${JAR_FILE_PATH} Illust_Customer.war
-ENTRYPOINT ["java","-jar","./Illust_Customer.war"]
+ARG JAR_FILE_PATH=target/*.jar
+COPY ${JAR_FILE_PATH} Illust_Customer.jar
+ENTRYPOINT ["java","-jar","./Illust_Customer.jar"]
