--- a/WEB/Clonet/Login/Dockerfile
+++ b/WEB/Clonet/Login/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-ARG JAR_FILE_PATH=/build/libs/*.war
-COPY ${JAR_FILE_PATH} Login.war
-ENTRYPOINT ["java","-jar","./Login.war"]
+ARG JAR_FILE_PATH=target/*.jar
+COPY ${JAR_FILE_PATH} Login.jar
+ENTRYPOINT ["java","-jar","./Login.jar"]
