--- a/WEB/Clonet/Contact_Edit_User/Dockerfile
+++ b/WEB/Clonet/Contact_Edit_User/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-ARG JAR_FILE_PATH=/build/libs/*.war
-COPY ${JAR_FILE_PATH} Contact_Edit_User.war
-ENTRYPOINT ["java","-jar","./Contact_Edit_User.war"]
+ARG JAR_FILE_PATH=target/*.jar
+COPY ${JAR_FILE_PATH} Contact_Edit_User.jar
+ENTRYPOINT ["java","-jar","./Contact_Edit_User.jar"]
