--- a/WEB/Clonet/Illust_Select_User/Dockerfile
+++ b/WEB/Clonet/Illust_Select_User/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
-ARG JAR_FILE_PATH=/build/libs/*.war
-COPY ${JAR_FILE_PATH} Illust_Select_User.war
-ENTRYPOINT ["java","-jar","./Illust_Select_User.war"]
+ARG JAR_FILE_PATH=target/*.jar
+COPY ${JAR_FILE_PATH} Login.jar
+ENTRYPOINT ["java","-jar","./Illust_Select_User.jar"]
