--- a/WEB/Clonet/Login/build.gradle
+++ b/WEB/Clonet/Login/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'org.springframework.boot' version '2.6.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'war'
 }
 
 group = 'CACA'
@@ -15,14 +14,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-bootWar {
-    archiveBaseName = 'Login'
-    archiveFileName = 'Login.war'
-    archiveVersion = "0.0.0"
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
 tasks.named('test') {
