--- a/WEB/Prometheus.yml
+++ b/WEB/Prometheus.yml
@@ -2,6 +2,15 @@
 global:
   scrape_interval: 15s  # 15초마다 매트릭을 수집 한다.
 
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+          - alertmanager:9093
+rule_files:
+    - "alert_rules.yml"
+
 scrape_configs:
   - job_name: node 
     scrape_timeout: 15s
@@ -55,8 +64,3 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: [ '172.18.0.20:8088' ]
-  # - job_name: 'about_customer_back'
-  #   scrape_timeout: 15s
-  #   # metrics_path: '/about_customer_front/actuator/prometheus'
-  #   static_configs:
-  #     - targets: ['localhost:8081']
