--- a/WEB/Back/Contact_Customer/build.gradle
+++ b/WEB/Back/Contact_Customer/build.gradle
@@ -14,7 +14,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    implementation 'org.projectlombok:lombok:1.18.20'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'mysql:mysql-connector-java'
+	implementation "org.springframework.boot:spring-boot-starter-jdbc"
+	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2"
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+// https://mvnrepository.com/artifact/org.xmlunit/xmlunit-core
+	testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.8.4'
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
