--- a/WEB/docker-compose.yml
+++ b/WEB/docker-compose.yml
@@ -1,125 +1,125 @@
 version: '3'
 services:
 ########################################
-  about_customer_front:
-    container_name: about_customer_front_con
-    build:
-      context: .
-      dockerfile: Front/about_customer/Dockerfile
-    ports:
-      - 8001:80
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.3
+#   about_customer_front:
+#     container_name: about_customer_front_con
+#     build:
+#       context: .
+#       dockerfile: Front/about_customer/Dockerfile
+#     ports:
+#       - 8001:80
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.3
 
-  about_customer_back:
-    container_name: about_customer_back_con
-    build:
-      context: .
-      dockerfile: Back/About_Customer/Dockerfile
-      args:
-        JAR_FILE: ./Back/About_Customer/build/libs/*.jar
-    ports:
-      - 8081:8081
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.13
-########################################
-  about_edit_user_front:
-    container_name: about_edit_user_front_con
-    build:
-      context: .
-      dockerfile: Front/about_edit_user/Dockerfile
-    ports:
-      - 8002:80
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.4
+#   about_customer_back:
+#     container_name: about_customer_back_con
+#     build:
+#       context: .
+#       dockerfile: Back/About_Customer/Dockerfile
+#       args:
+#         JAR_FILE: ./Back/About_Customer/build/libs/*.jar
+#     ports:
+#       - 8081:8081
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.13
+# ########################################
+#   about_edit_user_front:
+#     container_name: about_edit_user_front_con
+#     build:
+#       context: .
+#       dockerfile: Front/about_edit_user/Dockerfile
+#     ports:
+#       - 8002:80
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.4
 
-  about_edit_user_back:
-    container_name: about_edit_user_back_con
-    build:
-      context: .
-      dockerfile: Back/About_Edit_User/Dockerfile
-      args:
-        JAR_FILE: ./Back/About_Edit_User/build/libs/*.jar
-    ports:
-      - 8082:8082
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.14
-########################################
-  contact_customer_front:
-    container_name: contact_customer_front_con
-    build:
-      context: .
-      dockerfile: Front/contact_customer/Dockerfile
-    ports:
-      - 8003:80
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.5
+#   about_edit_user_back:
+#     container_name: about_edit_user_back_con
+#     build:
+#       context: .
+#       dockerfile: Back/About_Edit_User/Dockerfile
+#       args:
+#         JAR_FILE: ./Back/About_Edit_User/build/libs/*.jar
+#     ports:
+#       - 8082:8082
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.14
+# ########################################
+#   contact_customer_front:
+#     container_name: contact_customer_front_con
+#     build:
+#       context: .
+#       dockerfile: Front/contact_customer/Dockerfile
+#     ports:
+#       - 8003:80
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.5
 
-  contact_customer_back:
-    container_name: contact_customer_back_con
-    build:
-      context: .
-      dockerfile: Back/Contact_Customer/Dockerfile
-      args:
-        JAR_FILE: ./Back/Contact_Customer/build/libs/*.jar
-    ports:
-      - 8083:8083
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.15
-########################################
-  contact_edit_user_front:
-    container_name: contact_edit_user_front_con
-    build:
-      context: .
-      dockerfile: Front/contact_edit_user/Dockerfile
-    ports:
-      - 8004:80
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.6
+#   contact_customer_back:
+#     container_name: contact_customer_back_con
+#     build:
+#       context: .
+#       dockerfile: Back/Contact_Customer/Dockerfile
+#       args:
+#         JAR_FILE: ./Back/Contact_Customer/build/libs/*.jar
+#     ports:
+#       - 8083:8083
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.15
+# ########################################
+#   contact_edit_user_front:
+#     container_name: contact_edit_user_front_con
+#     build:
+#       context: .
+#       dockerfile: Front/contact_edit_user/Dockerfile
+#     ports:
+#       - 8004:80
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.6
 
-  contact_edit_user_back:
-    container_name: contact_edit_user_back_con
-    build:
-      context: .
-      dockerfile: Back/Contact_Edit_User/Dockerfile
-      args:
-        JAR_FILE: ./Back/Contact_Edit_User/build/libs/*.jar
-    ports:
-      - 8084:8084
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.16
-########################################
-  home_front:
-    container_name: home_front_con
-    build:
-      context: .
-      dockerfile: Front/home/Dockerfile
-    ports:
-      - 8005:80
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.7
+#   contact_edit_user_back:
+#     container_name: contact_edit_user_back_con
+#     build:
+#       context: .
+#       dockerfile: Back/Contact_Edit_User/Dockerfile
+#       args:
+#         JAR_FILE: ./Back/Contact_Edit_User/build/libs/*.jar
+#     ports:
+#       - 8084:8084
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.16
+# ########################################
+  # home_front:
+  #   container_name: home_front_con
+  #   build:
+  #     context: .
+  #     dockerfile: Front/home/Dockerfile
+  #   ports:
+  #     - 8005:80
+  #   networks:
+  #     clonet_network:
+  #       ipv4_address: 172.18.0.7
 
-  home_back:
-    container_name: home_back_con
-    build:
-      context: .
-      dockerfile: Back/Home/Dockerfile
-      args:
-        JAR_FILE: ./Back/Home/build/libs/*.jar
-    ports:
-      - 8085:8085
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.17
+  # home_back:
+  #   container_name: home_back_con
+  #   build:
+  #     context: .
+  #     dockerfile: Back/Home/Dockerfile
+  #     args:
+  #       JAR_FILE: ./Back/Home/build/libs/*.jar
+  #   ports:
+  #     - 8085:8085
+  #   networks:
+  #     clonet_network:
+  #       ipv4_address: 172.18.0.17
 ########################################
   illust_customer_front:
     container_name: illust_customer_front_con
@@ -141,94 +141,122 @@ services:
         JAR_FILE: ./Back/Illust_Customer/build/libs/*.jar
     ports:
       - 8086:8086
+    depends_on : 
+      - kafka
+      - zookeeper
     networks:
       clonet_network:
         ipv4_address: 172.18.0.18
-########################################
-  illust_select_user_front:
-    container_name: illust_select_user_front_con
-    build:
-      context: .
-      dockerfile: Front/illust_select_user/Dockerfile
-    ports:
-      - 8007:80
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.9
+# ########################################
+#   illust_select_user_front:
+#     container_name: illust_select_user_front_con
+#     build:
+#       context: .
+#       dockerfile: Front/illust_select_user/Dockerfile
+#     ports:
+#       - 8007:80
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.9
 
-  illust_select_user_back:
-    container_name: illust_select_user_back_con
-    build:
-      context: .
-      dockerfile: Back/Illust_Select_User/Dockerfile
-      args:
-        JAR_FILE: ./Back/Illust_Select_User/build/libs/*.jar
-    ports:
-      - 8087:8087
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.19
-########################################
-  login_front:
-    container_name: login_front_con
-    build:
-      context: .
-      dockerfile: Front/login/Dockerfile
-    ports:
-      - 8008:80
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.10
+#   illust_select_user_back:
+#     container_name: illust_select_user_back_con
+#     build:
+#       context: .
+#       dockerfile: Back/Illust_Select_User/Dockerfile
+#       args:
+#         JAR_FILE: ./Back/Illust_Select_User/build/libs/*.jar
+#     ports:
+#       - 8087:8087
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.19
+# ########################################
+#   login_front:
+#     container_name: login_front_con
+#     build:
+#       context: .
+#       dockerfile: Front/login/Dockerfile
+#     ports:
+#       - 8008:80
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.10
 
-  login_back:
-    container_name: login_back_con
-    build:
-      context: .
-      dockerfile: Back/Login/Dockerfile
-      args:
-        JAR_FILE: ./Back/Login/build/libs/*.jar
-    ports:
-      - 8088:8088
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.20
-########################################
-  prometheus:
-    container_name: prometheus_con
-    image: prom/prometheus
-    restart: on-failure
-    ports:
-      - 9090:9090
-    networks:
-      clonet_network:
-        ipv4_address: 172.18.0.77
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./alert_rules.yml:/etc/prometheus/alert_rules.yml
+#   login_back:
+#     container_name: login_back_con
+#     build:
+#       context: .
+#       dockerfile: Back/Login/Dockerfile
+#       args:
+#         JAR_FILE: ./Back/Login/build/libs/*.jar
+#     ports:
+#       - 8088:8088
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.20
+# ########################################
+#   prometheus:
+#     container_name: prometheus_con
+#     image: prom/prometheus
+#     restart: on-failure
+#     ports:
+#       - 9090:9090
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.77
+#     volumes:
+#       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+#       - ./alert_rules.yml:/etc/prometheus/alert_rules.yml
+# ######################################## 
+#   grafana:
+#     container_name: grafana_con
+#     image: grafana/grafana
+#     restart: on-failure
+#     ports:
+#       - 3000:3000
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.88
+# ########################################  
+#   alertmanager:
+#     container_name: alertmanager_con
+#     image: prom/alertmanager
+#     user: root
+#     ports:
+#     - "9093:9093"
+#     volumes:
+#     - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+#     networks:
+#       clonet_network:
+#         ipv4_address: 172.18.0.99
+
 ######################################## 
-  grafana:
-    container_name: grafana_con
-    image: grafana/grafana
-    restart: on-failure
+  zookeeper:
+    container_name: zookeeper_con
+    image: wurstmeister/zookeeper:latest
     ports:
-      - 3000:3000
+      - "2181:2181"
     networks:
       clonet_network:
-        ipv4_address: 172.18.0.88
-########################################  
-  alertmanager:
-    image: prom/alertmanager
-    user: root
+        ipv4_address: 172.18.0.33
+
+
+  kafka:
+    container_name: kafka_con
+    image: wurstmeister/kafka:2.12-2.5.0
     ports:
-    - "9093:9093"
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
-    - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       clonet_network:
-        ipv4_address: 172.18.0.99
-
+        ipv4_address: 172.18.0.44
+        
 ######################################## 
-
 networks:
   clonet_network:
     external: true
