Style: Combine aboutCustomer+contactCustomer, AboutEditUser+ContactEditUser+Home+Login

--- a/WEB/Front/Home/nginx.conf
+++ b/WEB/Front/Home/nginx.conf
@@ -53,6 +53,30 @@ http {
         	proxy_pass  http://172.18.0.17:8085/home2;
         }
 
+        location /contact_edit_user1 {
+        	proxy_pass  http://172.18.0.17:8085/contact_edit_user1;
+        }
+
+        location /contact_edit_user2 {
+            proxy_pass  http://172.18.0.17:8085/contact_edit_user2;
+
+        }
+        location /about_edit_user1 {
+        	 proxy_pass  http://172.18.0.17:8085/about_edit_user1;
+        }
+
+        location /about_edit_user2 {
+            proxy_pass  http://172.18.0.17:8085/about_edit_user2;
+        }
+
+        location /login1 {
+        	proxy_pass  http://172.18.0.17:8085/login1;
+        }
+
+        location /login2 {
+            proxy_pass  http://172.18.0.17:8085/login2;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
