--- a/WEB/Front/about_customer/nginx.conf
+++ b/WEB/Front/about_customer/nginx.conf
@@ -53,6 +53,14 @@ http {
         	proxy_pass  http://172.18.0.13:8081/about_customer2;
         }
 
+        location /contact_customer1 {
+        	proxy_pass  http://172.18.0.13:8081/contact_customer1;
+        }
+
+        location /contact_customer2 {
+            proxy_pass  http://172.18.0.13:8081/contact_customer2;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
