--- a/WEB/Back/Home/build.gradle
+++ b/WEB/Back/Home/build.gradle
@@ -16,6 +16,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'mysql:mysql-connector-java'
+	implementation "org.springframework.boot:spring-boot-starter-jdbc"
+	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2"
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.8.4'
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 }
