--- a/WEB/Back/Home/src/main/resources/application.yml
+++ b/WEB/Back/Home/src/main/resources/application.yml
@@ -3,3 +3,13 @@ management:
     web:
       exposure:
         include: health, info, prometheus
+
+spring:
+  datasource:
+    url: jdbc:mysql://{}/clonet_database?characterEncoding=utf8&useSSL=false
+    username: admin
+    password: qwer1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  mapper-locations: classpath:mapper/**.xml
