Feat: Home login Back Complete

--- a/WEB/Front/Home/nginx.conf
+++ b/WEB/Front/Home/nginx.conf
@@ -77,6 +77,10 @@ http {
             proxy_pass  http://172.18.0.17:8085/login2;
         }
 
+        location /login {
+            proxy_pass  http://172.18.0.17:8085/login;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
