Feat: WEB Login Message from server

--- a/WEB/Front/Home/nginx.conf
+++ b/WEB/Front/Home/nginx.conf
@@ -77,7 +77,7 @@ http {
             proxy_pass  http://172.18.0.17:8085/login2;
         }
 
-        location /login {
+        location /login?(.*) {
             proxy_pass  http://172.18.0.17:8085/login;
         }
 
