Feat: Illust_customer Back Front Connect

--- a/WEB/Front/illust_customer/nginx.conf
+++ b/WEB/Front/illust_customer/nginx.conf
@@ -53,6 +53,10 @@ http {
         	proxy_pass  http://172.18.0.18:8086/illust_customer2;
         }
 
+        location /piece?(.*) {
+            proxy_pass  http://172.18.0.17:8086/piece;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
