--- a/WEB/Back/Illust_Customer/build.gradle
+++ b/WEB/Back/Illust_Customer/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+	implementation 'org.json:json:20190722'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 tasks.named('test') {
