--- a/WEB/docker-compose.yml
+++ b/WEB/docker-compose.yml
@@ -137,29 +137,29 @@ services:
 #         ipv4_address: 172.18.0.99
 
 ####################################### 
-#  zookeeper:
-#    container_name: zookeeper_con
-#    image: wurstmeister/zookeeper:latest
-#    ports:
-#     - "2181:2181"
-#    networks:
-#      clonet_network:
-#        ipv4_address: 172.18.0.33
+ zookeeper:
+   container_name: zookeeper_con
+   image: wurstmeister/zookeeper:latest
+   ports:
+    - "2181:2181"
+   networks:
+     clonet_network:
+       ipv4_address: 172.18.0.33
 
 
-#  kafka:
-#    container_name: kafka_con
-#    image: wurstmeister/kafka:2.12-2.5.0
-#    ports:
-#     - "9092:9092"
-#    environment:
-#      KAFKA_ADVERTISED_HOST_NAME: 172.18.0.44
-#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-#    volumes:
-#     - /var/run/docker.sock:/var/run/docker.sock
-#    networks:
-#      clonet_network:
-#        ipv4_address: 172.18.0.44
+ kafka:
+   container_name: kafka_con
+   image: wurstmeister/kafka:2.12-2.5.0
+   ports:
+    - "9092:9092"
+   environment:
+     KAFKA_ADVERTISED_HOST_NAME: 172.18.0.44
+     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+   volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+   networks:
+     clonet_network:
+       ipv4_address: 172.18.0.44
 
 ######################################## 
 
