Feat: WEB Illust_Select_User kafka

--- a/WEB/Back/Illust_Select_User/src/main/resources/application.yml
+++ b/WEB/Back/Illust_Select_User/src/main/resources/application.yml
@@ -3,3 +3,16 @@ management:
     web:
       exposure:
         include: health, info, prometheus
+
+spring:
+  kafka:
+    consumer:
+      bootstrap-servers: 172.18.0.44:9092
+      group-id: foo
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      bootstrap-servers: 172.18.0.44:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
