--- a/WEB/Back/Illust_Select_User/build.gradle
+++ b/WEB/Back/Illust_Select_User/build.gradle
@@ -23,6 +23,12 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+	implementation 'mysql:mysql-connector-java'
+	implementation "org.springframework.boot:spring-boot-starter-jdbc"
+	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2"
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.8.4'
 }
 
 tasks.named('test') {
