--- a/WEB/Back/Illust_Select_User/build.gradle
+++ b/WEB/Back/Illust_Select_User/build.gradle
@@ -29,6 +29,13 @@ dependencies {
 	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2"
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	testImplementation group: 'org.xmlunit', name: 'xmlunit-core', version: '2.8.4'
+
+	// https://mvnrepository.com/artifact/com.jcraft/jsch
+	implementation 'com.jcraft:jsch:0.1.44-1'
+
+	// https://mvnrepository.com/artifact/com.hierynomus/sshj
+	implementation 'com.hierynomus:sshj:0.32.0'
+
 }
 
 tasks.named('test') {
