--- a/WEB/docker-compose.yml
+++ b/WEB/docker-compose.yml
@@ -25,86 +25,87 @@ services:
   #     clonet_network:
   #       ipv4_address: 172.18.0.13
   # ########################################
-  # home_front:
-  #   container_name: home_front_con
-  #   build:
-  #     context: .
-  #     dockerfile: Front/home/Dockerfile
-  #   ports:
-  #     - 8005:80
-  #   networks:
-  #     clonet_network:
-  #       ipv4_address:
-  #         172.18.0.7
-
-  # home_back:
-  #   container_name: home_back_con
-  #   build:
-  #     context: .
-  #     dockerfile: Back/Home/Dockerfile
-  #     args:
-  #       JAR_FILE: ./Back/Home/build/libs/*.jar
-  #   ports:
-  #     - 8085:8085
-  #   networks:
-  #     clonet_network:
-  #       ipv4_address:
-  #         172.18.0.17
-  #######################################
-  illust_customer_front:
-   container_name: illust_customer_front_con
-   build:
-     context: .
-     dockerfile: Front/illust_customer/Dockerfile
-   ports:
-     - 8006:80
-   networks:
-     clonet_network:
-       ipv4_address: 172.18.0.8
-
-  illust_customer_back:
-    container_name: illust_customer_back_con
+  home_front:
+    container_name: home_front_con
     build:
-     context: .
-     dockerfile: Back/Illust_Customer/Dockerfile
-     args:
-       JAR_FILE: ./Back/Illust_Customer/build/libs/*.jar
+      context: .
+      dockerfile: Front/home/Dockerfile
     ports:
-     - 8086:8086
-    depends_on :
-     - kafka
-     - zookeeper
+      - 8005:80
     networks:
-     clonet_network:
-       ipv4_address: 172.18.0.18
-  ########################################
-  # illust_select_user_front:
-  #   container_name: illust_select_user_front_con
-  #   build:
-  #     context: .
-  #     dockerfile: Front/illust_select_user/Dockerfile
-  #   ports:
-  #     - 8007:80
-  #   networks:
-  #     clonet_network:
-  #       ipv4_address: 172.18.0.9
+      clonet_network:
+        ipv4_address:
+          172.18.0.7
 
-  # illust_select_user_back:
-  #   container_name: illust_select_user_back_con
-  #   build:
-  #     context: .
-  #     dockerfile: Back/Illust_Select_User/Dockerfile
-  #     args:
-  #       JAR_FILE: ./Back/Illust_Select_User/build/libs/*.jar
-  #   ports:
-  #     - 8087:8087
-  #   depends_on:
-  #     - kafka
-  #     - zookeeper
-  #   networks:
-  #     clonet_network:
-  #       ipv4_address:
-  #         172.18.0.19
+  home_back:
+    container_name: home_back_con
+    build:
+      context: .
+      dockerfile: Back/Home/Dockerfile
+      args:
+        JAR_FILE: ./Back/Home/build/libs/*.jar
+    ports:
+      - 8085:8085
+    networks:
+      clonet_network:
+        ipv4_address:
+          172.18.0.17
+  #######################################
+#  illust_customer_front:
+#   container_name: illust_customer_front_con
+#   build:
+#     context: .
+#     dockerfile: Front/illust_customer/Dockerfile
+#   ports:
+#     - 8006:80
+#   networks:
+#     clonet_network:
+#       ipv4_address: 172.18.0.8
+#
+#  illust_customer_back:
+#    container_name: illust_customer_back_con
+#    build:
+#     context: .
+#     dockerfile: Back/Illust_Customer/Dockerfile
+#     args:
+#       JAR_FILE: ./Back/Illust_Customer/build/libs/*.jar
+#    ports:
+#     - 8086:8086
+#    depends_on :
+#     - kafka
+#     - zookeeper
+#    networks:
+#     clonet_network:
+#       ipv4_address: 172.18.0.18
+  ########################################
+  illust_select_user_front:
+    container_name: illust_select_user_front_con
+    build:
+      context: .
+      dockerfile: Front/illust_select_user/Dockerfile
+    ports:
+      - 8007:80
+    networks:
+      clonet_network:
+        ipv4_address:
+          172.18.0.9
+
+  illust_select_user_back:
+    container_name: illust_select_user_back_con
+    build:
+      context: .
+      dockerfile: Back/Illust_Select_User/Dockerfile
+      args:
+        JAR_FILE: ./Back/Illust_Select_User/build/libs/*.jar
+    ports:
+      - 8087:8087
+    depends_on:
+      - kafka
+      - zookeeper
+    networks:
+      clonet_network:
+        ipv4_address:
+          172.18.0.19
   ########################################
   #   prometheus:
   #     container_name: prometheus_con
