Feat: Web customer CRUD

--- a/WEB/Back/Illust_Select_User/src/main/resources/application.yml
+++ b/WEB/Back/Illust_Select_User/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
   datasource:
-    url: { }clonet_database?characterEncoding=utf8&useSSL=false
+    url: { }/clonet_database?characterEncoding=utf8&useSSL=false
     username: admin
     password: qwer1234
     driver-class-name:
