Comment: alert_rules.yml

--- a/WEB/alert_rules.yml
+++ b/WEB/alert_rules.yml
@@ -1,6 +1,7 @@
 groups:
 - name: alertname
   rules:
+  # InstanceDown
   - alert: InstanceDown
     expr: up == 0
     for: 1m
@@ -10,6 +11,7 @@ groups:
       summary: "Endpoint {{ $labels.instance }} down"
       description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minutes."
 
+  # HostOutOfMemory
   - alert: HostOutOfMemory
     expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 10
     for: 2m
@@ -19,6 +21,7 @@ groups:
       summary: "Host out of memory (instance {{ $labels.instance }})"
       description: "Node memory is filling up (< 10% left)\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
+  # HostMemoryUnderMemoryPressure
   - alert: HostMemoryUnderMemoryPressure
     expr: rate(node_vmstat_pgmajfault[1m]) > 1000
     for: 2m
@@ -28,6 +31,7 @@ groups:
       summary: "Host memory under memory pressure (instance {{ $labels.instance }})"
       description: "The node is under heavy memory pressure. High rate of major page faults\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
+  # HostOutOfDiskSpace
   - alert: HostOutOfDiskSpace
     expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 10 and ON (instance, device, mountpoint) node_filesystem_readonly == 0
     for: 2m
@@ -37,6 +41,7 @@ groups:
       summary: "Host out of disk space (instance {{ $labels.instance }})"
       description: "Disk is almost full (< 10% left)\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
+  # HostHighCpuLoad
   - alert: HostHighCpuLoad
     expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 80
     for: 0m
@@ -46,6 +51,7 @@ groups:
       summary: "Host high CPU load (instance {{ $labels.instance }})"
       description: "CPU load is > 80%\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
 
+  # PrometheusTooManyRestarts
   - alert: PrometheusTooManyRestarts
     expr: changes(process_start_time_seconds{job=~"prometheus|pushgateway|alertmanager"}[1s]) > 2
     for: 0m
@@ -55,6 +61,7 @@ groups:
       summary: Prometheus too many restarts (instance {{ $labels.instance }})
       description: "Prometheus has restarted more than twice in the last 1 sec. It might be crashlooping.\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
 
+  # PrometheusNotConnectedToAlertmanager
   - alert: PrometheusNotConnectedToAlertmanager
     expr: prometheus_notifications_alertmanagers_discovered < 1
     for: 0m
