Feat: Docker image version amd64

--- a/WEB_DockerImage/docker-compose.yml
+++ b/WEB_DockerImage/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   ########################################
   about_customer_front:
     container_name: about_customer_front_con
-    image: pavi03/clonet_about_customer_front
+    image: pavi03/clonet_about_customer_front:amd64
     ports:
       - 8001:80
     networks:
@@ -13,7 +13,7 @@ services:
 
   about_customer_back:
     container_name: about_customer_back_con
-    image: pavi03/clonet_about_customer_back
+    image: pavi03/clonet_about_customer_back:amd64
     ports:
       - 8081:8081
     networks:
@@ -23,7 +23,7 @@ services:
   # ########################################
   home_front:
     container_name: home_front_con
-    image: pavi03/clonet_home_front
+    image: pavi03/clonet_home_front:amd64
     ports:
       - 8005:80
     networks:
@@ -33,7 +33,7 @@ services:
 
   home_back:
     container_name: home_back_con
-    image: pavi03/clonet_home_back
+    image: pavi03/clonet_home_back:amd64
     ports:
       - 8085:8085
     networks:
@@ -43,7 +43,7 @@ services:
   #######################################
   illust_customer_front:
    container_name: illust_customer_front_con
-   image: pavi03/clonet_illust_customer_front
+   image: pavi03/clonet_illust_customer_front:amd64
    ports:
      - 8006:80
    networks:
@@ -52,7 +52,7 @@ services:
 
   illust_customer_back:
     container_name: illust_customer_back_con
-    image: pavi03/clonet_illust_customer_back
+    image: pavi03/clonet_illust_customer_back:amd64
     ports:
      - 8086:8086
     depends_on :
@@ -64,7 +64,7 @@ services:
   ########################################
   illust_select_user_front:
     container_name: illust_select_user_front_con
-    image: pavi03/clonet_illust_select_user_front
+    image: pavi03/clonet_illust_select_user_front:amd64
     ports:
       - 8007:80
     networks:
@@ -74,7 +74,7 @@ services:
 
   illust_select_user_back:
     container_name: illust_select_user_back_con
-    image: pavi03/clonet_illust_select_user_back
+    image: pavi03/clonet_illust_select_user_back:amd64
     ports:
       - 8087:8087
     depends_on:
